--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 						</div>
 					</div>
-					<a class="col-auto btn btn-buynow" href="https://raydium.io/swap/?outputMint=2s8AT36jzHfYDnkT1rTTFZti7EkVHhXon6ptAi8cpump&amp;inputMint=sol" target="_blank">
+					<a class="col-auto btn btn-buynow" href="https://raydium.io/swap/?outputMint=A4tJajuYv5jthwKZFSivDQaUNUykjgay8cDP4UABpump&amp;inputMint=sol" target="_blank">
 						BUY NOW
 					</a>
 				</div>
@@ -92,7 +92,7 @@
 		<div class="col-12">
 			<div class="row justify-content-center">
 				<div class="col-auto steve-contract">
-					2s8AT36jzHfYDnkT1rTTFZti7EkVHhXon6ptAi8cpump
+					A4tJajuYv5jthwKZFSivDQaUNUykjgay8cDP4UABpump
 				</div>
 			</div>
 		</div>
@@ -137,7 +137,7 @@
 							<div class="col-12 text-center mb-3">
 								SOCIAL MEDIA
 							</div>
-							<a class="col-auto social" href="https://t.me/Solana_Steve" target="_blank">
+							<a class="col-auto social" href="https://t.me/ronny_sol" target="_blank">
 								<div class="row">
 									<div class="col-auto">
 										<img src="images/telegram-icon.png" width="70%">
@@ -147,7 +147,7 @@
 									</div>
 								</div>
 							</a>
-							<a class="col-auto social" href="https://x.com/solanastevecoin" target="_blank">
+							<a class="col-auto social" href="https://x.com/ronny__sol" target="_blank">
 								<div class="row">
 									<div class="col-auto">
 										<img src="images/x-icon.png" width="70%">
@@ -203,7 +203,7 @@
 					</div>
 				</div>
 				<div class="col-12 text-center">
-					<a href="https://t.me/Solana_Steve" target="_blank" class="col-auto btn btn-community">
+					<a href="https://t.me/ronny_sol" target="_blank" class="col-auto btn btn-community">
 						JOIN RONNY COMMUNITY
 					</a>
 				</div>
