--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 						</div>
 					</div>
-					<a class="col-auto btn btn-buynow" href="https://raydium.io/swap/?outputMint=A4tJajuYv5jthwKZFSivDQaUNUykjgay8cDP4UABpump&amp;inputMint=sol" target="_blank">
+					<a class="col-auto btn btn-buynow" href="https://pump.fun/coin/A4tJajuYv5jthwKZFSivDQaUNUykjgay8cDP4UABpump" target="_blank">
 						BUY NOW
 					</a>
 				</div>
